Add rake db:convert_feeds_to_properties task

--- a/db/files/feeds_processed/field_path_mappings/field_path_mapping_http:--www.example.com-feed-source-0_2016-11-26.yaml
+++ b/db/files/feeds_processed/field_path_mappings/field_path_mapping_http:--www.example.com-feed-source-0_2016-11-26.yaml
@@ -8,7 +8,7 @@ location_street: ''
 location_city: ''
 location_state: ''
 location_zip: ''
-location_latiitude: ''
+location_latitude: ''
 location_longitude: ''
 floorplan_name: ''
 floorplan_square_feet: ''
