--- a/db/files/feeds_processed/field_path_mappings/field_path_mapping_http:--www.example.com-feed-source-7_2016-11-26.yaml
+++ b/db/files/feeds_processed/field_path_mappings/field_path_mapping_http:--www.example.com-feed-source-7_2016-11-26.yaml
@@ -1,14 +1,14 @@
 ---
 marketing_name: " PhysicalProperty Property Identification MarketingName"
 website: ''
-description: ''
+description: " PhysicalProperty Property Information LongDescription"
 contact_phone: " PhysicalProperty Property Identification Phone Number"
-contact_email: ''
+contact_email: " PhysicalProperty Property Identification Email"
 location_street: " PhysicalProperty Property Identification Address Address1"
 location_city: " PhysicalProperty Property Identification Address City"
 location_state: " PhysicalProperty Property Identification Address State"
 location_zip: " PhysicalProperty Property Identification Address Zip"
-location_latiitude: " PhysicalProperty Property Identification Latitude"
+location_latitude: " PhysicalProperty Property Identification Latitude"
 location_longitude: " PhysicalProperty Property Identification Longitude"
 floorplan_name: " PhysicalProperty Property Floorplan Name"
 floorplan_square_feet: " PhysicalProperty Property Floorplan SquareFeet"
@@ -16,10 +16,10 @@ floorplan_market_rent: " PhysicalProperty Property Floorplan MarketRent"
 floorplan_effective_rent: " PhysicalProperty Property Floorplan EffectiveRent"
 floorplan_bedrooms: " PhysicalProperty Property Floorplan Room"
 floorplan_bathrooms: " PhysicalProperty Property Floorplan Room"
-floorplan_availability: " PhysicalProperty Property Floorplan UnitsAvailable"
+floorplan_availability: ''
 file_floorplan: ''
 file_property: ''
-amenities_community: ''
-amenities_floorplan: ''
-pet_dog: ''
-pet_cat: ''
+amenities_community: " PhysicalProperty Property Amenities Community"
+amenities_floorplan: " PhysicalProperty Property Amenities Floorplan"
+pet_dog: " PhysicalProperty Property Policy Pet"
+pet_cat: " PhysicalProperty Property Policy Pet"
