--- a/db/files/feeds_processed/field_path_mappings/field_path_mapping_http:--www.example.com-feed-source-1_2016-11-26.yaml
+++ b/db/files/feeds_processed/field_path_mappings/field_path_mapping_http:--www.example.com-feed-source-1_2016-11-26.yaml
@@ -1,6 +1,6 @@
 ---
 marketing_name: " PhysicalProperty Property Identification MarketingName"
-website: ''
+website: " PhysicalProperty Property Identification WebSite"
 description: " PhysicalProperty Property Information LongDescription"
 contact_phone: " PhysicalProperty Property Identification Phone Number"
 contact_email: " PhysicalProperty Property Identification Email"
@@ -8,17 +8,17 @@ location_street: " PhysicalProperty Property Identification Address Address1"
 location_city: " PhysicalProperty Property Identification Address City"
 location_state: " PhysicalProperty Property Identification Address State"
 location_zip: " PhysicalProperty Property Identification Address Zip"
-location_latiitude: " PhysicalProperty Property Identification Latitude"
+location_latitude: " PhysicalProperty Property Identification Latitude"
 location_longitude: " PhysicalProperty Property Identification Longitude"
 floorplan_name: " PhysicalProperty Property Floorplan Name"
 floorplan_square_feet: " PhysicalProperty Property Floorplan SquareFeet"
 floorplan_market_rent: " PhysicalProperty Property Floorplan MarketRent"
-floorplan_effective_rent: " PhysicalProperty Property Floorplan EffectiveRent"
+floorplan_effective_rent: ''
 floorplan_bedrooms: " PhysicalProperty Property Floorplan Room"
 floorplan_bathrooms: " PhysicalProperty Property Floorplan Room"
 floorplan_availability: ''
 file_floorplan: ''
-file_property: ''
+file_property: " PhysicalProperty Property File"
 amenities_community: " PhysicalProperty Property Amenities Community"
 amenities_floorplan: " PhysicalProperty Property Amenities Floorplan"
 pet_dog: " PhysicalProperty Property Policy Pet"
