--- a/db/files/feeds_processed/field_path_mappings/field_path_mapping_http:--www.example.com-feed-source-5_2016-11-26.yaml
+++ b/db/files/feeds_processed/field_path_mappings/field_path_mapping_http:--www.example.com-feed-source-5_2016-11-26.yaml
@@ -8,7 +8,7 @@ location_street: " PhysicalProperty Property PropertyID Address Address"
 location_city: " PhysicalProperty Property PropertyID Address City"
 location_state: " PhysicalProperty Property PropertyID Address State"
 location_zip: " PhysicalProperty Property PropertyID Address PostalCode"
-location_latiitude: " PhysicalProperty Property ILS_Identification Latitude"
+location_latitude: " PhysicalProperty Property ILS_Identification Latitude"
 location_longitude: " PhysicalProperty Property ILS_Identification Longitude"
 floorplan_name: " PhysicalProperty Property Floorplan Name"
 floorplan_square_feet: " PhysicalProperty Property Floorplan SquareFeet"
