Remove location_ prefix from property fields

--- a/db/files/feeds_processed/field_path_mappings/field_path_mapping_http:--www.example.com-feed-source-3_2016-11-26.yaml
+++ b/db/files/feeds_processed/field_path_mappings/field_path_mapping_http:--www.example.com-feed-source-3_2016-11-26.yaml
@@ -4,12 +4,12 @@ website: ''
 description: ''
 contact_phone: ''
 contact_email: ''
-location_street: ''
-location_city: ''
-location_state: ''
-location_zip: ''
-location_latitude: ''
-location_longitude: ''
+street: ''
+city: ''
+state: ''
+zip: ''
+latitude: ''
+longitude: ''
 floorplan_name: " PhysicalProperty Property Floorplan Name"
 floorplan_square_feet: ''
 floorplan_market_rent: ''
