--- a/db/files/feeds_processed/field_path_mappings/field_path_mapping_http:--www.example.com-feed-source-4_2016-11-26.yaml
+++ b/db/files/feeds_processed/field_path_mappings/field_path_mapping_http:--www.example.com-feed-source-4_2016-11-26.yaml
@@ -4,12 +4,12 @@ website: " PhysicalProperty Property PropertyID Identification WebSite"
 description: " PhysicalProperty Property Feature Description"
 contact_phone: " PhysicalProperty Property PropertyID Phone"
 contact_email: ''
-location_street: " PhysicalProperty Property PropertyID Address Address1"
-location_city: " PhysicalProperty Property PropertyID Address City"
-location_state: " PhysicalProperty Property PropertyID Address State"
-location_zip: " PhysicalProperty Property PropertyID Address PostalCode"
-location_latitude: " PhysicalProperty Property PropertyID Identification Latitude"
-location_longitude: " PhysicalProperty Property PropertyID Identification Longitude"
+street: " PhysicalProperty Property PropertyID Address Address1"
+city: " PhysicalProperty Property PropertyID Address City"
+state: " PhysicalProperty Property PropertyID Address State"
+zip: " PhysicalProperty Property PropertyID Address PostalCode"
+latitude: " PhysicalProperty Property PropertyID Identification Latitude"
+longitude: " PhysicalProperty Property PropertyID Identification Longitude"
 floorplan_name: " PhysicalProperty Property Floorplan Name"
 floorplan_square_feet: " PhysicalProperty Property Floorplan SquareFeet"
 floorplan_market_rent: " PhysicalProperty Property Floorplan MarketRent"
