--- a/db/files/feeds_processed/field_path_mappings/field_path_mapping_http:--www.example.com-feed-source-6_2016-11-26.yaml
+++ b/db/files/feeds_processed/field_path_mappings/field_path_mapping_http:--www.example.com-feed-source-6_2016-11-26.yaml
@@ -4,12 +4,12 @@ website: " PhysicalProperty Property Identification WebSite"
 description: " PhysicalProperty Property Information LongDescription"
 contact_phone: " PhysicalProperty Property Identification Phone Number"
 contact_email: " PhysicalProperty Property Identification Email"
-location_street: " PhysicalProperty Property Identification Address Address1"
-location_city: " PhysicalProperty Property Identification Address City"
-location_state: " PhysicalProperty Property Identification Address State"
-location_zip: " PhysicalProperty Property Identification Address Zip"
-location_latitude: " PhysicalProperty Property Identification Latitude"
-location_longitude: " PhysicalProperty Property Identification Longitude"
+street: " PhysicalProperty Property Identification Address Address1"
+city: " PhysicalProperty Property Identification Address City"
+state: " PhysicalProperty Property Identification Address State"
+zip: " PhysicalProperty Property Identification Address Zip"
+latitude: " PhysicalProperty Property Identification Latitude"
+longitude: " PhysicalProperty Property Identification Longitude"
 floorplan_name: " PhysicalProperty Property Floorplan Name"
 floorplan_square_feet: " PhysicalProperty Property Floorplan SquareFeet"
 floorplan_market_rent: " PhysicalProperty Property Floorplan MarketRent"
