Remove join tables for amenities and import amenity json

--- a/db/files/feeds_processed/field_path_mappings/field_path_mapping_http:--www.example.com-feed-source-4_2016-11-26.yaml
+++ b/db/files/feeds_processed/field_path_mappings/field_path_mapping_http:--www.example.com-feed-source-4_2016-11-26.yaml
@@ -19,6 +19,7 @@ floorplan_bathrooms: " PhysicalProperty Property Floorplan Bathrooms"
 floorplan_availability: ''
 file_floorplan: " PhysicalProperty Property Floorplan ImageURL"
 file_property: " PhysicalProperty Property Slideshow"
+amenities: ''
 amenities_community: ''
 amenities_floorplan: ''
 pet_dog: ''
