--- a/db/files/feeds_processed/field_path_mappings/field_path_mapping_http:--www.example.com-feed-source-8_2016-11-26.yaml
+++ b/db/files/feeds_processed/field_path_mappings/field_path_mapping_http:--www.example.com-feed-source-8_2016-11-26.yaml
@@ -19,6 +19,7 @@ floorplan_bathrooms: " PhysicalProperty Property Floorplan Room"
 floorplan_availability: " PhysicalProperty Property Floorplan UnitsAvailable"
 file_floorplan: ''
 file_property: " PhysicalProperty Property File"
+amenities: " PhysicalProperty Property Amenities"
 amenities_community: " PhysicalProperty Property Amenities Community"
 amenities_floorplan: " PhysicalProperty Property Amenities Floorplan"
 pet_dog: " PhysicalProperty Property Policy Pet"
