--- a/db/files/feeds_processed/field_path_mappings/field_path_mapping_http:--www.example.com-feed-source-9_2016-11-26.yaml
+++ b/db/files/feeds_processed/field_path_mappings/field_path_mapping_http:--www.example.com-feed-source-9_2016-11-26.yaml
@@ -19,6 +19,7 @@ floorplan_bathrooms: " PhysicalProperty Property Floorplan Room"
 floorplan_availability: " PhysicalProperty Property Floorplan UnitsAvailable"
 file_floorplan: ''
 file_property: ''
+amenities: ''
 amenities_community: ''
 amenities_floorplan: ''
 pet_dog: ''
